[package]
name = "xing_trading_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.1"
dotenv = "0.15.0"
chrono = { version = "0.4.41", features = ["serde"] }
log = "0.4.27"
zmq = "0.10.0"
bytes = "1.10.1"
futures = "0.3.31"
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-webpki-roots"] }
tungstenite = "0.26.2"
rustls = "0.23.27"
futures-util = "0.3.31"


[profile.test]
warnings = "deny"
